PROJECT(evnet_core)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

OPTION(static_lib "Build static library" OFF)
OPTION(ndebug "Set –DNDEBUG" OFF)

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
INCLUDE(compiler)
evnet_compiler_and_linker()

SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -W -g -gstabs+")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O2 -W -Wall -Wno-unused-parameter -Wunused-variable")
SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/)

IF (CMAKE_BUILD_TYPE STREQUAL "Debug")
    MESSAGE(STATUS "Debug Mode")
    MESSAGE(STATUS "Flags:" ${CMAKE_CXX_FLAGS_DEBUG})
ELSE (CMAKE_BUILD_TYPE STREQUAL "Debug")
    MESSAGE(STATUS "Release Mode")
    MESSAGE(STATUS "Flags:" ${CMAKE_CXX_FLAGS_RELEASE})
    #SET (CMAKE_BUILD_TYPE "Release" CACHE STRING "build type" FORCE)
ENDIF (CMAKE_BUILD_TYPE STREQUAL "Debug")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/reactor)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/ LIB_SRC)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/reactor/ LIB_SRC)

if (static_lib)
    ADD_LIBRARY(evnet_static STATIC ${LIB_SRC})
    SET_TARGET_PROPERTIES(evnet_static PROPERTIES OUTPUT_NAME "evnet_core")
endif()

ADD_LIBRARY(evnet_shared SHARED ${LIB_SRC})
SET_TARGET_PROPERTIES(evnet_shared PROPERTIES OUTPUT_NAME "evnet_core")

